# IVAN

./: README.md
AVANCE2/: Untitled-1.dart  barco_control.py  lector_bmi160.py
AVANCE2/Bmi_axis/: Bmi_axis.ino
AVANCE2/bmi_control/: package.xml  setup.cfg  setup.py
AVANCE2/bmi_control/bmi_control/: bmi_to_boat_control.py
AVANCE2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
IVAN/CODIGOS/AVANCE1/: arduino_program_system.txt  barco_control.py
IVAN/CODIGOS/AVANCE2/: Untitled-1.dart  barco_control.py
IVAN/CODIGOS/Codigo_BMI160/: Codigo_BMI160.ino
IVAN/IVAN_KICAD/: Capacitor_100Uf.kicad_sym  IVAN_KICAD.kicad_pcb  IVAN_KICAD.kicad_prl  IVAN_KICAD.kicad_pro  IVAN_KICAD.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
IVAN/IVAN_KICAD/Capacitor_100uF_25V.pretty/: Capacitor100uuF.kicad_mod
src/bmi_control/: package.xml  setup.py
src/bmi_control/bmi_control/: barco_control.py  bmi_ivan_control.py  bmi_joystick_node.py
src/robot_boat/: CMakeLists.txt  package.xml
src/robot_boat/config/: test_urdf.yaml
src/robot_boat/launch/: display.launch.py  gazebo_boat.launch.py
src/robot_boat/meshes/: cabeza.STL  caja.STL  ganchos.STL  motor1.STL  motor2.STL  punta.STL
src/robot_boat/urdf/: robot_boat.urdf  robot_boat_clean.urdf  robot_boat_gazebo.urdf  robot_boat_gazebo_final.urdf  robot_boat_no_ganchos.urdf  robot_boat_simple.urdf  robot_boat_simple.urdfx  robot_boat_unified.urdf
src/robot_boat_simple/robot_boat_simple/: CMakeLists.txt  package.xml
src/robot_boat_simple/robot_boat_simple/config/: joint_names_robot_boat_simple.yaml
src/robot_boat_simple/robot_boat_simple/launch/: display.launch  gazebo.launch
src/robot_boat_simple/robot_boat_simple/meshes/: caja.STL  motor1.STL  motor2.STL
src/robot_boat_simple/robot_boat_simple/urdf/: robot_boat_simple.csv  robot_boat_simple.urdf
